Mon Dec  1 18:13:43 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/CosNotification.mpc:
          Removed template files, they don't need to build on their own

Mon Dec  1 11:27:36 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/RTScheduling/VoidData/test_client.cpp (main):

          Passed the address of the integer to the operation, instead
          of its value, so it can be appropriately converted to void*.

Mon Dec  1 17:18:33 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/POA/Explicit_Activation/Alt_Resources/Alt_Resource.mpc:
          Set correct dynamicflags and added gnu verbatim so that this
          example is not build with GNU because it uses the WFMO Reactor

Mon Dec  1 10:26:53 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/util/utl_global.cpp:

          Modified the logic of pragma prefix updates to eliminate the
          removal of the global scope prefix (if any), which should never
          happen. Thanks to Simon McQueen <sm@prismtechnologies.com>
          for reporting the bug.

Mon Dec 01 03:05:44 2003  Huang-Ming Huang  <hh1@cse.wustl.edu>

        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/FTEC_ProxySupplier.cpp:
          Fixed Anachronism warning in SunForte8 build.

Mon Dec 01 07:58:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

	* orbsvcs/examples/RtEC/Simple/RtEC_Simple.mpc:
          This examples is using the Naming Service, so added this to the
          MPC file.

Sun Nov 30 15:53:49 2003  Huang-Ming Huang  <hh1@cse.wustl.edu>

        * orbsvcs/orbsvcs/FaultTolerance/FT_ClientORBInitializer.cpp:
          Removed registering policy factory for HEARTBEAT_ENABLED_POLICY
          which should be specific to FT server ORB.

Sun Nov 30 12:15:45 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/performance-tests/RTEvent/RTCORBA_Baseline/client.cpp:

          Added missing include of ace/Barrier.h.
