@@ -41,11 +41,14 @@ namespace FTRTEC {
 
     initialized = 1;
 
+    Fault_Detector* detector;
+
     // Parse any service configurator parameters.
     if (argc > 0 && ACE_OS::strcasecmp (argv[0], ACE_LIB_TEXT("sctp")) == 0)
     {
 #if (TAO_HAS_SCIOP == 1)
-      detector_.reset(new STCP_Fault_Detector);
+      ACE_NEW_RETURN(detector, STCP_Fault_Detector,  -1);
+      ACE_AUTO_PTR_RESET(detector_,detector,Fault_Detector)
 #else
       ACE_DEBUG ((LM_DEBUG,
                   "(%P|%t) SCTP not enabled. ",
@@ -53,8 +56,10 @@ namespace FTRTEC {
 #endif /* TAO_HAS_SCIOP */
       argc--; argv++;
     }
-    else
-      detector_.reset(new TCP_Fault_Detector);
+    else {
+      ACE_NEW_RETURN(detector, TCP_Fault_Detector,  -1);
+      ACE_AUTO_PTR_RESET(detector_,detector,TCP_Fault_Detector);
+    }
     return detector_->init(argc, argv);
   }
 
