@@ -1,3 +1,13 @@
+Mon Dec  1 12:20:11 2003  Huang-Ming Huang  <hh1@cse.wustl.edu>
+
+        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/Fault_Detector_Loader.cpp:
+        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/Replication_Service.cpp:
+          Use ACE_AUTOP_PTR_RESET instead of auto_ptr.reset() to fix the problem
+          in MSVC 6.
+
+        * orbsvcs/FTRT_Event_Service/Factory_Service/EventChannelFactory_i.cpp:
+          Fixed warnings in SunForte8 build.
+
 Mon Dec  1 18:13:43 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * orbsvcs/orbsvcs/CosNotification.mpc:
